--- a/home.htm
+++ b/home.htm
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/webp" href="static/elephant1.webp">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OpenSource Gig Platform</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
