--- a/contact.html
+++ b/contact.html
@@ -96,7 +96,7 @@
                 id="message"
               ></textarea>
             </div>
-            <button class="btn btn-dark" href="#">Submit</button>
+            <button class="btn btn-dark mb-5" href="#">Submit</button>
           </div>
         </div>
       </div>
