--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item mr-5">
-              <a class="nav-link" href="/contact.html">Contact</a>
+              <a class="nav-link" href="./contact.html">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#about">About</a>
+              <a class="nav-link" href="./index.html">About</a>
             </li>
             <!-- Add more navbar items as needed -->
           </ul>
