--- a/developer-home.html
+++ b/developer-home.html
@@ -19,7 +19,9 @@
     <!-- Header -->
     <header>
       <div class="row mx-auto">
-        <nav class="navbar navbar-expand-lg bg-light p-3 mb-3 border-bottom fixed-top">
+        <nav
+          class="navbar navbar-expand-lg bg-light p-3 mb-3 border-bottom fixed-top"
+        >
           <div class="container-fluid">
             <a
               class="navbar-brand text-dark me-4 kerala-dev-logo custom-title"
@@ -110,12 +112,12 @@
       </div>
     </header>
     <!-- Job Sections -->
-    <section style="margin-top: 115px;">
+    <section style="margin-top: 110px">
       <div class="container mt-4">
         <!-- Job section 1 -->
         <h4 class="">Latest Jobs</h4>
         <div class="row d-flex justify-content-around">
-          <div class="card my-4" style="width: 15rem; height: 16rem">
+          <div class="card my-4 col-xl-2 col-sm-5 col-8">
             <div class="card-body">
               <h5 class="card-title">Job 1</h5>
               <h6 class="card-subtitle mb-2 text-body-secondary">Company 1</h6>
@@ -126,12 +128,9 @@
               <a href="#" class="card-link text-decoration-none">
                 <button type="button" class="btn btn-dark">View</button>
               </a>
-              <a href="#" class="card-link text-decoration-none">
-                <button type="button" class="btn btn-dark">Apply</button>
-              </a>
             </div>
           </div>
-          <div class="card my-4" style="width: 15rem; height: 16rem">
+          <div class="card my-4 col-xl-2 col-sm-5 col-8">
             <div class="card-body">
               <h5 class="card-title">Job 2</h5>
               <h6 class="card-subtitle mb-2 text-body-secondary">Company 2</h6>
@@ -142,12 +141,9 @@
               <a href="#" class="card-link text-decoration-none">
                 <button type="button" class="btn btn-dark">View</button>
               </a>
-              <a href="#" class="card-link text-decoration-none">
-                <button type="button" class="btn btn-dark">Apply</button>
-              </a>
             </div>
           </div>
-          <div class="card my-4" style="width: 15rem; height: 16rem">
+          <div class="card my-4 col-xl-2 col-sm-5 col-8">
             <div class="card-body">
               <h5 class="card-title">Job 3</h5>
               <h6 class="card-subtitle mb-2 text-body-secondary">Company 3</h6>
@@ -158,12 +154,9 @@
               <a href="#" class="card-link text-decoration-none">
                 <button type="button" class="btn btn-dark">View</button>
               </a>
-              <a href="#" class="card-link text-decoration-none">
-                <button type="button" class="btn btn-dark">Apply</button>
-              </a>
             </div>
           </div>
-          <div class="card my-4" style="width: 15rem; height: 16rem">
+          <div class="card my-4 col-xl-2 col-sm-5 col-8">
             <div class="card-body">
               <h5 class="card-title">Job 4</h5>
               <h6 class="card-subtitle mb-2 text-body-secondary">Company 4</h6>
@@ -174,12 +167,9 @@
               <a href="#" class="card-link text-decoration-none">
                 <button type="button" class="btn btn-dark">View</button>
               </a>
-              <a href="#" class="card-link text-decoration-none">
-                <button type="button" class="btn btn-dark">Apply</button>
-              </a>
             </div>
           </div>
-          <div class="card my-4" style="width: 15rem; height: 16rem">
+          <div class="card my-4 col-xl-2 col-sm-5 col-8">
             <div
               class="card-body d-flex justify-content-center align-items-center"
             >
@@ -192,7 +182,7 @@
         <!-- Job section 2 -->
         <h4 class="my-2">Jobs based on your profile</h4>
         <div class="row d-flex justify-content-around">
-          <div class="card my-4" style="width: 15rem; height: 16rem">
+          <div class="card my-4 col-xl-2 col-sm-5 col-8">
             <div class="card-body">
               <h5 class="card-title">Job 1</h5>
               <h6 class="card-subtitle mb-2 text-body-secondary">Company 1</h6>
@@ -203,12 +193,9 @@
               <a href="#" class="card-link text-decoration-none">
                 <button type="button" class="btn btn-dark">View</button>
               </a>
-              <a href="#" class="card-link text-decoration-none">
-                <button type="button" class="btn btn-dark">Apply</button>
-              </a>
             </div>
           </div>
-          <div class="card my-4" style="width: 15rem; height: 16rem">
+          <div class="card my-4 col-xl-2 col-sm-5 col-8">
             <div class="card-body">
               <h5 class="card-title">Job 2</h5>
               <h6 class="card-subtitle mb-2 text-body-secondary">Company 2</h6>
@@ -219,12 +206,9 @@
               <a href="#" class="card-link text-decoration-none">
                 <button type="button" class="btn btn-dark">View</button>
               </a>
-              <a href="#" class="card-link text-decoration-none">
-                <button type="button" class="btn btn-dark">Apply</button>
-              </a>
             </div>
           </div>
-          <div class="card my-4" style="width: 15rem; height: 16rem">
+          <div class="card my-4 col-xl-2 col-sm-5 col-8">
             <div class="card-body">
               <h5 class="card-title">Job 3</h5>
               <h6 class="card-subtitle mb-2 text-body-secondary">Company 3</h6>
@@ -235,12 +219,9 @@
               <a href="#" class="card-link text-decoration-none">
                 <button type="button" class="btn btn-dark">View</button>
               </a>
-              <a href="#" class="card-link text-decoration-none">
-                <button type="button" class="btn btn-dark">Apply</button>
-              </a>
             </div>
           </div>
-          <div class="card my-4" style="width: 15rem; height: 16rem">
+          <div class="card my-4 col-xl-2 col-sm-5 col-8">
             <div class="card-body">
               <h5 class="card-title">Job 4</h5>
               <h6 class="card-subtitle mb-2 text-body-secondary">Company 4</h6>
@@ -251,12 +232,9 @@
               <a href="#" class="card-link text-decoration-none">
                 <button type="button" class="btn btn-dark">View</button>
               </a>
-              <a href="#" class="card-link text-decoration-none">
-                <button type="button" class="btn btn-dark">Apply</button>
-              </a>
             </div>
           </div>
-          <div class="card my-4" style="width: 15rem; height: 16rem">
+          <div class="card my-4 col-xl-2 col-sm-5 col-8">
             <div
               class="card-body d-flex justify-content-center align-items-center"
             >
@@ -269,8 +247,7 @@
       </div>
     </section>
     <!-- Footer -->
-    <div class="row">
-    </div>
+    <div class="row"></div>
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
