--- a/developer-home.html
+++ b/developer-home.html
@@ -88,7 +88,7 @@
                   aria-expanded="false"
                 >
                   <img
-                    src="https://github.com/mdo.png"
+                    src="./static/munnar.jpg"
                     alt="mdo"
                     width="32"
                     height="32"
@@ -100,7 +100,7 @@
                   aria-labelledby="dropdownUser1"
                 >
                   <li><a class="dropdown-item" href="#">Profile</a></li>
-                  <li><a class="dropdown-item" href="#">Stack</a></li>
+                  <li><a class="dropdown-item" href="#">Preference</a></li>
                   <li><a class="dropdown-item" href="#">settings</a></li>
                   <li><hr class="dropdown-divider" /></li>
                   <li><a class="dropdown-item" href="#">Sign out</a></li>
@@ -112,10 +112,10 @@
       </div>
     </header>
     <!-- Job Sections -->
-    <section style="margin-top: 110px">
-      <div class="container mt-4">
+    <section style="margin-top: 120px">
+      <div class="container">
         <!-- Job section 1 -->
-        <h4 class="">Latest Jobs</h4>
+        <h4 class="mb-4">Latest Jobs</h4>
         <div class="row d-flex justify-content-around">
           <div class="card my-4 col-xl-2 col-sm-5 col-8">
             <div class="card-body">
@@ -180,7 +180,7 @@
           </div>
         </div>
         <!-- Job section 2 -->
-        <h4 class="my-2">Jobs based on your profile</h4>
+        <h4 class="my-4">Jobs based on your profile</h4>
         <div class="row d-flex justify-content-around">
           <div class="card my-4 col-xl-2 col-sm-5 col-8">
             <div class="card-body">
@@ -247,7 +247,21 @@
       </div>
     </section>
     <!-- Footer -->
-    <div class="row"></div>
+    <div class="conatiner mt-5">
+      <footer class="d-flex flex-wrap justify-content-between align-items-center py-4 px-5 border-top bg-light">
+        <a href="/" class="col-12 col-lg-4 text-center text-lg-start mb-3 mb-lg-0 me-md-auto link-dark text-decoration-none kerala-dev-logo">
+          <img src="./static/elephant1.webp" alt="" srcset="">
+        </a>
+        <ul class="nav col-12 col-lg-4 justify-content-around">
+          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
+          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Companies</a></li>
+          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
+          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
+          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Contact</a></li>
+        </ul>
+        <p class="col-12 col-lg-4 mb-0 text-center text-lg-end mt-3 mt-lg-0 text-muted">© 2021 Company, Inc</p>
+      </footer>
+    </div>
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
