--- a/developer-home.html
+++ b/developer-home.html
@@ -37,19 +37,29 @@
             <button
               class="navbar-toggler"
               type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#navbarSupportedContent"
-              aria-controls="navbarSupportedContent"
-              aria-expanded="false"
-              aria-label="Toggle navigation"
+              data-bs-toggle="offcanvas"
+              data-bs-target="#offcanvasNavbar"
+              aria-controls="offcanvasNavbar"
             >
               <span class="navbar-toggler-icon"></span>
             </button>
+            <!-- Offcanvas -->
             <div
-              class="collapse navbar-collapse mx-2"
-              id="navbarSupportedContent"
+              class="offcanvas offcanvas-end"
+              tabindex="-1"
+              id="offcanvasNavbar"
+              aria-labelledby="offcanvasNavbarLabel"
             >
-              <div class="col-md-4">
+              <div class="offcanvas-header">
+                <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Menu</h5>
+                <button
+                  type="button"
+                  class="btn-close text-reset"
+                  data-bs-dismiss="offcanvas"
+                  aria-label="Close"
+                ></button>
+              </div>
+              <div class="offcanvas-body">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
                     <a
@@ -65,59 +75,114 @@
                   <li class="nav-item">
                     <a class="nav-link text-dark mx-2" href="#">About</a>
                   </li>
-                </ul>
-              </div>
-              <div class="col-md-4">
-                <form class="d-flex" role="search" action="" method="post">
-                  <input
-                    class="form-control me-2"
-                    type="search"
-                    placeholder="Search jobs or companies"
-                    aria-label="Search"
-                  />
-                </form>
-              </div>
-              <div
-                class="dropdown col-md-4 d-none d-sm-none d-md-none d-lg-block"
-              >
-                <a
-                  href="#"
-                  class="d-block link-dark text-decoration-none dropdown-toggle text-md-end"
-                  id="dropdownUser1"
-                  data-bs-toggle="dropdown"
-                  aria-expanded="false"
-                >
-                  <img
-                    src="./static/munnar.jpg"
-                    alt="mdo"
-                    width="32"
-                    height="32"
-                    class="rounded-circle"
-                  />
-                </a>
-                <ul
-                  class="dropdown-menu text-small dropdown-menu-end"
-                  aria-labelledby="dropdownUser1"
-                >
-                  <li><a class="dropdown-item" href="#">Profile</a></li>
-                  <li><a class="dropdown-item" href="#">Preference</a></li>
-                  <li><a class="dropdown-item" href="#">settings</a></li>
-                  <li><hr class="dropdown-divider" /></li>
-                  <li><a class="dropdown-item" href="#">Sign out</a></li>
+                  <div class="dropdown mt-2">
+                    <a
+                      href="#"
+                      class="link-dark text-decoration-none dropdown-toggle"
+                      id="dropdownUser1"
+                      data-bs-toggle="dropdown"
+                      aria-expanded="false"
+                    >
+                      <img
+                        src="./static/Dummy_profile.png"
+                        alt="mdo"
+                        width="36"
+                        height="36"
+                        class="rounded-circle"
+                      />
+                    </a>
+                    <ul
+                      class="dropdown-menu text-small dropdown-menu-end"
+                      aria-labelledby="dropdownUser1"
+                    >
+                      <li><a class="dropdown-item" href="#">Profile</a></li>
+                      <li><a class="dropdown-item" href="#">Preference</a></li>
+                      <li><a class="dropdown-item" href="#">settings</a></li>
+                      <li><hr class="dropdown-divider" /></li>
+                      <li><a class="dropdown-item" href="#">Sign out</a></li>
+                    </ul>
+                  </div>
                 </ul>
               </div>
             </div>
+            <!-- Nav items for Large Screens -->
+            <div class="col-md-3 d-none d-lg-block">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a
+                    class="nav-link active text-dark mx-2"
+                    aria-current="page"
+                    href="#"
+                    >Home</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-dark mx-2" href="#">Companies</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-dark mx-2" href="#">About</a>
+                </li>
+              </ul>
+            </div>
+            <!-- Search Form for Large Screens -->
+            <form class="col-md-4 ms-5 d-none d-lg-block">
+              <input
+                class="form-control me-2"
+                type="search"
+                placeholder="Search jobs or companies"
+                aria-label="Search"
+              />
+            </form>
+            <!-- Drop down Profile icon for large screen -->
+            <div class="dropdown col-md-3 text-end d-none d-lg-block">
+              <a
+                href="#"
+                class="link-dark text-decoration-none dropdown-toggle"
+                id="dropdownUser1"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                <img
+                  src="./static/Dummy_profile.png"
+                  alt="mdo"
+                  width="36"
+                  height="36"
+                  class="rounded-circle"
+                />
+              </a>
+              <ul
+                class="dropdown-menu text-small dropdown-menu-end shadow"
+                aria-labelledby="dropdownUser1"
+              >
+                <li><a class="dropdown-item" href="#">Profile</a></li>
+                <li><a class="dropdown-item" href="#">Preference</a></li>
+                <li><a class="dropdown-item" href="#">settings</a></li>
+                <li><hr class="dropdown-divider" /></li>
+                <li><a class="dropdown-item" href="#">Sign out</a></li>
+              </ul>
+            </div>
           </div>
         </nav>
+        <!-- Search Form for small Screens -->
+        <div class="container col-10 mt-5 pt-5">
+          <form class="d-flex d-lg-none">
+            <input
+              class="form-control shadow"
+              type="search"
+              placeholder="Search jobs or companies"
+              aria-label="Search"
+            />
+          </form>
+        </div>
       </div>
     </header>
     <!-- Job Sections -->
-    <section style="margin-top: 120px">
+    <section style="margin-top: 30px">
       <div class="container">
         <!-- Job section 1 -->
-        <h4 class="mb-4">Latest Jobs</h4>
+        <h4 class="mb-4 text-center text-lg-start">Latest Jobs</h4>
         <div class="row d-flex justify-content-around">
-          <div class="card my-4 col-xl-2 col-sm-5 col-8">
+          <div class="card my-4 col-xl-2 col-sm-5 col-8 shadow">
             <div class="card-body">
               <h5 class="card-title">Job 1</h5>
               <h6 class="card-subtitle mb-2 text-body-secondary">Company 1</h6>
@@ -130,7 +195,7 @@
               </a>
             </div>
           </div>
-          <div class="card my-4 col-xl-2 col-sm-5 col-8">
+          <div class="card my-4 col-xl-2 col-sm-5 col-8 shadow shadow">
             <div class="card-body">
               <h5 class="card-title">Job 2</h5>
               <h6 class="card-subtitle mb-2 text-body-secondary">Company 2</h6>
@@ -143,7 +208,7 @@
               </a>
             </div>
           </div>
-          <div class="card my-4 col-xl-2 col-sm-5 col-8">
+          <div class="card my-4 col-xl-2 col-sm-5 col-8 shadow">
             <div class="card-body">
               <h5 class="card-title">Job 3</h5>
               <h6 class="card-subtitle mb-2 text-body-secondary">Company 3</h6>
@@ -156,7 +221,7 @@
               </a>
             </div>
           </div>
-          <div class="card my-4 col-xl-2 col-sm-5 col-8">
+          <div class="card my-4 col-xl-2 col-sm-5 col-8 shadow">
             <div class="card-body">
               <h5 class="card-title">Job 4</h5>
               <h6 class="card-subtitle mb-2 text-body-secondary">Company 4</h6>
@@ -169,20 +234,22 @@
               </a>
             </div>
           </div>
-          <div class="card my-4 col-xl-2 col-sm-5 col-8">
+          <div class="card my-4 col-xl-2 col-sm-5 col-8 shadow">
             <div
               class="card-body d-flex justify-content-center align-items-center"
             >
               <a href="#" class="card-link text-decoration-none">
-                <button type="button" class="btn btn-dark">View More...</button>
+                <button type="button" class="btn btn-dark">View more..</button>
               </a>
             </div>
           </div>
         </div>
         <!-- Job section 2 -->
-        <h4 class="my-4">Jobs based on your profile</h4>
+        <h4 class="my-4 text-center text-lg-start">
+          Jobs based on your profile
+        </h4>
         <div class="row d-flex justify-content-around">
-          <div class="card my-4 col-xl-2 col-sm-5 col-8">
+          <div class="card my-4 col-xl-2 col-sm-5 col-8 shadow">
             <div class="card-body">
               <h5 class="card-title">Job 1</h5>
               <h6 class="card-subtitle mb-2 text-body-secondary">Company 1</h6>
@@ -195,7 +262,7 @@
               </a>
             </div>
           </div>
-          <div class="card my-4 col-xl-2 col-sm-5 col-8">
+          <div class="card my-4 col-xl-2 col-sm-5 col-8 shadow">
             <div class="card-body">
               <h5 class="card-title">Job 2</h5>
               <h6 class="card-subtitle mb-2 text-body-secondary">Company 2</h6>
@@ -208,7 +275,7 @@
               </a>
             </div>
           </div>
-          <div class="card my-4 col-xl-2 col-sm-5 col-8">
+          <div class="card my-4 col-xl-2 col-sm-5 col-8 shadow">
             <div class="card-body">
               <h5 class="card-title">Job 3</h5>
               <h6 class="card-subtitle mb-2 text-body-secondary">Company 3</h6>
@@ -221,7 +288,7 @@
               </a>
             </div>
           </div>
-          <div class="card my-4 col-xl-2 col-sm-5 col-8">
+          <div class="card my-4 col-xl-2 col-sm-5 col-8 shadow">
             <div class="card-body">
               <h5 class="card-title">Job 4</h5>
               <h6 class="card-subtitle mb-2 text-body-secondary">Company 4</h6>
@@ -234,12 +301,12 @@
               </a>
             </div>
           </div>
-          <div class="card my-4 col-xl-2 col-sm-5 col-8">
+          <div class="card my-4 col-xl-2 col-sm-5 col-8 shadow">
             <div
               class="card-body d-flex justify-content-center align-items-center"
             >
               <a href="#" class="card-link text-decoration-none">
-                <button type="button" class="btn btn-dark">View More...</button>
+                <button type="button" class="btn btn-dark">View more..</button>
               </a>
             </div>
           </div>
@@ -248,18 +315,37 @@
     </section>
     <!-- Footer -->
     <div class="conatiner mt-5">
-      <footer class="d-flex flex-wrap justify-content-between align-items-center py-4 px-5 border-top bg-light">
-        <a href="/" class="col-12 col-lg-4 text-center text-lg-start mb-3 mb-lg-0 me-md-auto link-dark text-decoration-none kerala-dev-logo">
-          <img src="./static/elephant1.webp" alt="" srcset="">
+      <footer
+        class="d-flex flex-wrap justify-content-between align-items-center py-4 px-5 border-top bg-light"
+      >
+        <a
+          href="/"
+          class="col-12 col-lg-4 text-center text-lg-start mb-3 mb-lg-0 me-md-auto link-dark text-decoration-none kerala-dev-logo"
+        >
+          <img src="./static/elephant1.webp" alt="" srcset="" />
         </a>
         <ul class="nav col-12 col-lg-4 justify-content-around">
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Companies</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Contact</a></li>
+          <li class="nav-item">
+            <a href="#" class="nav-link px-2 text-muted">Home</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link px-2 text-muted">Companies</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link px-2 text-muted">FAQs</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link px-2 text-muted">About</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link px-2 text-muted">Contact</a>
+          </li>
         </ul>
-        <p class="col-12 col-lg-4 mb-0 text-center text-lg-end mt-3 mt-lg-0 text-muted">© 2021 Company, Inc</p>
+        <p
+          class="col-12 col-lg-4 mb-0 text-center text-lg-end mt-3 mt-lg-0 text-muted"
+        >
+          © 2024 Kerala Devs
+        </p>
       </footer>
     </div>
     <!-- Optional JavaScript; choose one of the two! -->
