updated navbar links 2

--- a/developer-home.html
+++ b/developer-home.html
@@ -76,8 +76,11 @@
                     <a class="nav-link text-dark mx-2" href="./index.html">About</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link text-dark mx-2" href="./login.html">Login</a>
+                    <a class="nav-link text-dark mx-2" href="./contact.html">Contact</a>
                   </li>
+                  <!-- <li class="nav-item">
+                    <a class="nav-link text-dark mx-2" href="./login.html">Login</a>
+                  </li> -->
                   <div class="dropdown mt-2">
                     <a
                       href="#"
@@ -115,7 +118,7 @@
                   <a
                     class="nav-link active text-dark mx-2"
                     aria-current="page"
-                    href="#"
+                    href="./index.html"
                     >Home</a
                   >
                 </li>
@@ -123,7 +126,10 @@
                   <a class="nav-link text-dark mx-2" href="#">Companies</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link text-dark mx-2" href="#">About</a>
+                  <a class="nav-link text-dark mx-2" href="./index.html">About</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-dark mx-2" href="./contact.html">Contact</a>
                 </li>
               </ul>
             </div>
