--- a/developer-home.html
+++ b/developer-home.html
@@ -228,7 +228,7 @@
                     >
                       View Deatils
                     </a>
-                    <div class="card-text">Just Posted</div>
+                    <div class="card-text text-muted">Just Posted</div>
                   </div>
                 </div>
               </div>
@@ -274,7 +274,7 @@
                     >
                       View Deatils
                     </a>
-                    <div class="card-text">Just Posted</div>
+                    <div class="card-text text-muted">Just Posted</div>
                   </div>
                 </div>
               </div>
@@ -320,7 +320,7 @@
                     >
                       View Deatils
                     </a>
-                    <div class="card-text">Just Posted</div>
+                    <div class="card-text text-muted">Just Posted</div>
                   </div>
                 </div>
               </div>
@@ -366,7 +366,7 @@
                     >
                       View Deatils
                     </a>
-                    <div class="card-text">Just Posted</div>
+                    <div class="card-text text-muted">Just Posted</div>
                   </div>
                 </div>
               </div>
@@ -412,16 +412,56 @@
                     >
                       View Deatils
                     </a>
-                    <div class="card-text">Just Posted</div>
+                    <div class="card-text text-muted">Just Posted</div>
                   </div>
                 </div>
               </div>
               <div
-                class="card py-2 col-xxl-3 col-xl-4 col-lg-5 col-md-6 col-8 col shadow"
+                class="card transparent-card py-2 col-xxl-3 col-xl-4 col-lg-5 col-md-6 col-8 col shadow"
               >
-                <div
-                  class="card-body d-flex justify-content-center align-items-center"
-                >
+                <div class="card-body more-card">
+                  <div class="d-flex justify-content-between">
+                    <div class="col-md-5 status d-flex align-items-center mb-3">
+                      Actively Hiring
+                      <img
+                        src="./static/increase.png"
+                        alt=""
+                        srcset=""
+                        class="ms-2"
+                      />
+                    </div>
+                    <div class="col-md-7 text-end" style="cursor: pointer">
+                      <img src="./static/save-icon.png" alt="" srcset="" />
+                    </div>
+                  </div>
+                  <h5 class="card-title">Full Stack Developer</h5>
+                  <h6 class="card-subtitle mb-3 text-body-secondary">
+                    Abc Technologies
+                  </h6>
+                  <p class="card-subtitle mb-2 text-body-secondary">
+                    Kozhikode, Kerala
+                  </p>
+                  <div class="d-flex flex-wrap my-3">
+                    <div class="skill">React js</div>
+                    <div class="skill">Node js</div>
+                    <div class="skill">Sql</div>
+                    <div class="skill">JavaScript</div>
+                    <div class="skill">Git</div>
+                    <div class="skill">HTML</div>
+                    <div class="skill">Css</div>
+                    <div class="skill">Problem Solving</div>
+                  </div>
+                  <div class="d-flex justify-content-between">
+                    <a
+                      href="#"
+                      class="card-link text-dark text-decoration-none text-end status"
+                    >
+                      View Deatils
+                    </a>
+                    <div class="card-text text-muted">Just Posted</div>
+                  </div>
+                </div>
+                <div class="card-overlay">
                   <a href="#" class="card-link text-decoration-none">
                     <button type="button" class="btn btn-dark">
                       View more..
@@ -482,7 +522,7 @@
                     >
                       View Deatils
                     </a>
-                    <div class="card-text">Just Posted</div>
+                    <div class="card-text text-muted">Just Posted</div>
                   </div>
                 </div>
               </div>
@@ -528,7 +568,7 @@
                     >
                       View Deatils
                     </a>
-                    <div class="card-text">Just Posted</div>
+                    <div class="card-text text-muted">Just Posted</div>
                   </div>
                 </div>
               </div>
@@ -574,7 +614,7 @@
                     >
                       View Deatils
                     </a>
-                    <div class="card-text">Just Posted</div>
+                    <div class="card-text text-muted">Just Posted</div>
                   </div>
                 </div>
               </div>
@@ -620,7 +660,7 @@
                     >
                       View Deatils
                     </a>
-                    <div class="card-text">Just Posted</div>
+                    <div class="card-text text-muted">Just Posted</div>
                   </div>
                 </div>
               </div>
@@ -666,16 +706,56 @@
                     >
                       View Deatils
                     </a>
-                    <div class="card-text">Just Posted</div>
+                    <div class="card-text text-muted">Just Posted</div>
                   </div>
                 </div>
               </div>
               <div
-                class="card py-2 col-xxl-3 col-xl-4 col-lg-5 col-md-6 col-8 col shadow"
+                class="card transparent-card py-2 col-xxl-3 col-xl-4 col-lg-5 col-md-6 col-8 col shadow"
               >
-                <div
-                  class="card-body d-flex justify-content-center align-items-center"
-                >
+                <div class="card-body more-card">
+                  <div class="d-flex justify-content-between">
+                    <div class="col-md-5 status d-flex align-items-center mb-3">
+                      Actively Hiring
+                      <img
+                        src="./static/increase.png"
+                        alt=""
+                        srcset=""
+                        class="ms-2"
+                      />
+                    </div>
+                    <div class="col-md-7 text-end" style="cursor: pointer">
+                      <img src="./static/save-icon.png" alt="" srcset="" />
+                    </div>
+                  </div>
+                  <h5 class="card-title">Full Stack Developer</h5>
+                  <h6 class="card-subtitle mb-3 text-body-secondary">
+                    Abc Technologies
+                  </h6>
+                  <p class="card-subtitle mb-2 text-body-secondary">
+                    Kozhikode, Kerala
+                  </p>
+                  <div class="d-flex flex-wrap my-3">
+                    <div class="skill">React js</div>
+                    <div class="skill">Node js</div>
+                    <div class="skill">Sql</div>
+                    <div class="skill">JavaScript</div>
+                    <div class="skill">Git</div>
+                    <div class="skill">HTML</div>
+                    <div class="skill">Css</div>
+                    <div class="skill">Problem Solving</div>
+                  </div>
+                  <div class="d-flex justify-content-between">
+                    <a
+                      href="#"
+                      class="card-link text-dark text-decoration-none text-end status"
+                    >
+                      View Deatils
+                    </a>
+                    <div class="card-text text-muted">Just Posted</div>
+                  </div>
+                </div>
+                <div class="card-overlay">
                   <a href="#" class="card-link text-decoration-none">
                     <button type="button" class="btn btn-dark">
                       View more..
