update static files and job card

--- a/developer-home.html
+++ b/developer-home.html
@@ -227,7 +227,7 @@
                   <div class="d-flex justify-content-between">
                     <a
                       href="#"
-                      class="card-link text-dark text-decoration-none text-end status"
+                      class="card-link text-decoration-none text-end status"
                     >
                       View Deatils
                     </a>
@@ -273,7 +273,7 @@
                   <div class="d-flex justify-content-between">
                     <a
                       href="#"
-                      class="card-link text-dark text-decoration-none text-end status"
+                      class="card-link text-decoration-none text-end status"
                     >
                       View Deatils
                     </a>
@@ -319,7 +319,7 @@
                   <div class="d-flex justify-content-between">
                     <a
                       href="#"
-                      class="card-link text-dark text-decoration-none text-end status"
+                      class="card-link text-decoration-none text-end status"
                     >
                       View Deatils
                     </a>
@@ -365,7 +365,7 @@
                   <div class="d-flex justify-content-between">
                     <a
                       href="#"
-                      class="card-link text-dark text-decoration-none text-end status"
+                      class="card-link text-decoration-none text-end status"
                     >
                       View Deatils
                     </a>
@@ -411,7 +411,7 @@
                   <div class="d-flex justify-content-between">
                     <a
                       href="#"
-                      class="card-link text-dark text-decoration-none text-end status"
+                      class="card-link text-decoration-none text-end status"
                     >
                       View Deatils
                     </a>
@@ -457,7 +457,7 @@
                   <div class="d-flex justify-content-between">
                     <a
                       href="#"
-                      class="card-link text-dark text-decoration-none text-end status"
+                      class="card-link text-decoration-none text-end status"
                     >
                       View Deatils
                     </a>
@@ -521,7 +521,7 @@
                   <div class="d-flex justify-content-between">
                     <a
                       href="#"
-                      class="card-link text-dark text-decoration-none text-end status"
+                      class="card-link text-decoration-none text-end status"
                     >
                       View Deatils
                     </a>
@@ -567,7 +567,7 @@
                   <div class="d-flex justify-content-between">
                     <a
                       href="#"
-                      class="card-link text-dark text-decoration-none text-end status"
+                      class="card-link text-decoration-none text-end status"
                     >
                       View Deatils
                     </a>
@@ -613,7 +613,7 @@
                   <div class="d-flex justify-content-between">
                     <a
                       href="#"
-                      class="card-link text-dark text-decoration-none text-end status"
+                      class="card-link text-decoration-none text-end status"
                     >
                       View Deatils
                     </a>
@@ -659,7 +659,7 @@
                   <div class="d-flex justify-content-between">
                     <a
                       href="#"
-                      class="card-link text-dark text-decoration-none text-end status"
+                      class="card-link text-decoration-none text-end status"
                     >
                       View Deatils
                     </a>
@@ -705,7 +705,7 @@
                   <div class="d-flex justify-content-between">
                     <a
                       href="#"
-                      class="card-link text-dark text-decoration-none text-end status"
+                      class="card-link text-decoration-none text-end status"
                     >
                       View Deatils
                     </a>
@@ -751,7 +751,7 @@
                   <div class="d-flex justify-content-between">
                     <a
                       href="#"
-                      class="card-link text-dark text-decoration-none text-end status"
+                      class="card-link text-decoration-none text-end status"
                     >
                       View Deatils
                     </a>
