--- a/developer-home.html
+++ b/developer-home.html
@@ -78,6 +78,9 @@
                   <li class="nav-item">
                     <a class="nav-link text-dark mx-2" href="./contact.html">Contact</a>
                   </li>
+                  <li class="nav-item">
+                    <a class="nav-link text-dark mx-2" href="./login.html">Login</a>
+                  </li>
                   <!-- <li class="nav-item">
                     <a class="nav-link text-dark mx-2" href="./login.html">Login</a>
                   </li> -->
@@ -130,6 +133,9 @@
                 </li>
                 <li class="nav-item">
                   <a class="nav-link text-dark mx-2" href="./contact.html">Contact</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-dark mx-2" href="./login.html">Login</a>
                 </li>
               </ul>
             </div>
