fixed sidedraw navbar appearing on large screens

--- a/developer-home.html
+++ b/developer-home.html
@@ -45,7 +45,7 @@
             </button>
             <!-- Offcanvas -->
             <div
-              class="offcanvas offcanvas-end"
+              class="offcanvas offcanvas-end d-lg-none"
               tabindex="-1"
               id="offcanvasNavbar"
               aria-labelledby="offcanvasNavbarLabel"
