logo styling fix

--- a/price.html
+++ b/price.html
@@ -80,6 +80,8 @@
             <img
               src="./static/elephant1.webp"
               alt="kerala-dev-logo"
+              width="36"
+              height="36"
               srcset=""
             />
           </a>
@@ -311,7 +313,8 @@
         href="/"
         class="col-12 col-lg-4 text-center text-lg-start mb-3 mb-lg-0 me-md-auto link-dark text-decoration-none kerala-dev-logo"
       >
-        <img src="./static/elephant1.webp" alt="" srcset="" />
+        <img src="./static/elephant1.webp" alt="" srcset="" width="36"
+        height="36" />
       </a>
       <ul class="nav col-12 col-lg-4 justify-content-around">
         <li class="nav-item">
