--- a/price.html
+++ b/price.html
@@ -51,11 +51,14 @@
       margin-bottom: 15px;
     }
     .ad-section {
-      background-color: #f5f5f5;
+      background-color: #fff;
       border: 1px solid #ccc;
       padding: 20px;
       border-radius: 5px;
       margin-top: 30px;
+    }
+    .ad-section:hover {
+        box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); 
     }
     .ad-section img {
       max-width: 100%;
@@ -295,7 +298,7 @@
     <div class="row mt-5">
       <div class="col-lg-12">
         <div class="ad-section">
-          <h3 class="text-center">Ad Placement Options</h3>
+          <h3 class="text-center"><b>Ad Placement Options</b></h3>
           <p class="text-center">Banner ads, Sponsored listings, Display ads</p>
           <h4 class="text-center">Ad Plan (₹5000/month)</h4>
           <p class="text-center">Standard visibility to users</p>
