pricing page bug fix

--- a/price.html
+++ b/price.html
@@ -296,7 +296,7 @@
 
     <!-- Advertisement Plan Section -->
     <div class="row mt-5">
-      <div class="col-lg-12">
+      <div class="">
         <div class="ad-section">
           <h3 class="text-center"><b>Ad Placement Options</b></h3>
           <p class="text-center">Banner ads, Sponsored listings, Display ads</p>
@@ -308,7 +308,6 @@
   </div>
 
 
-  
 
    <!-- Footer -->
    <div class="conatiner mt-5">
